# llm-renewal-desk-agent

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
charts/renewal-desk/: Chart.yaml  values.yaml
charts/renewal-desk/files/: renewal-desk.json
charts/renewal-desk/templates/: _helpers.tpl  app-deployment.yaml  app-service.yaml  grafana.yaml  ingress.yaml  minio.yaml  ollama-deployment.yaml  ollama-pvc.yaml  ollama-service.yaml  otel.yaml  postgres.yaml  prometheus.yaml  ui-configmap.yaml  ui-deployment.yaml  ui-service.yaml
docs/: architecture.md  data-flow.md  evals.md  local-development.md  runbook.md  threat-model.md
eval/: harness.py  injection_suite.jsonl
eval/golden/: cases.jsonl  expected.jsonl
examples/curl/: ingest.sh  renewal_brief.sh
infra/: docker-compose.yml  otel-collector-config.yaml  prometheus.yml
infra/grafana/dashboards/: renewal-desk.json
infra/terraform/: README.md
scripts/: load_samples.py  migrate.py
src/app/: __init__.py  main.py
src/app/agent/: exceptions.py  runner.py  safety.py  schemas.py  validators.py
src/app/api/: routes.py
src/app/core/: config.py  debug.py  logging.py  metrics.py  middleware.py  tracing.py
src/app/llm/: ollama.py
src/app/rag/: chunking.py  hybrid_search.py  retrieval.py
src/app/storage/: object_store.py  postgres.py  vector_store.py
src/app/tools/: contracts.py  (+3 more)
tests/: test_health.py  test_renewal_brief_smoke.py  test_runner.py
tests/fixtures/: injection_contract.txt
ui/: README.md  config.js  index.html  styles.css
ui/assets/: usage.csv
(+6 files in other folders)
